# alumni

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
alumni/: admin.py  forms.py  models.py  urls.py  views.py
alumni/migrations/: 0001_alumni.py  0001_initial.py  0002_alumni.py
core/: settings.py  urls.py
templates/: base.html
templates/admin/: base_site.html
templates/alumni/: add.html  edit.html  index.html
