[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Roki Miftah Kamaludin <rokimiftah@gmail.com>"]
description = "Information on Student Alumni"
license = "MIT"
name = "alumni"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
django = "^4.2.5"
django-cors-headers = "^4.2.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
python = "^3.11"
python-dotenv = "^1.0.0"
setproctitle = "^1.3.2"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}

[tool.poetry.group.dev.dependencies]
djlint = "^1.32.1"
toml-sort = "^0.23.1"
